# ReDyMo-CPP

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile_nvidia  Doxyfile  README.md  docker-compose.yaml
.github/workflows/: build-test-coverage-any.yaml  build-test-coverage.yaml
data/: database.sqlite  simulation.sqlite
data/GC_content_TBrucei_TREU927/: Tb927_01_v5.1.txt  Tb927_02_v5.1.txt  Tb927_03_v5.1.txt  Tb927_04_v5.1.txt  Tb927_05_v5.1.txt  Tb927_06_v5.1.txt  Tb927_07_v5.1.txt  Tb927_08_v5.1.txt  Tb927_09_v5.1.txt  Tb927_10_v5.1.txt  Tb927_11_v5.1.txt
data/MFA-Seq_TBrucei_Senoid/: Tb927_01_v5.1.txt  Tb927_02_v5.1.txt  Tb927_03_v5.1.txt  Tb927_04_v5.1.txt  Tb927_05_v5.1.txt  Tb927_06_v5.1.txt  Tb927_07_v5.1.txt  Tb927_08_v5.1.txt  Tb927_09_v5.1.txt  Tb927_10_v5.1.txt  Tb927_11_v5.1.txt
data/MFA-Seq_TBrucei_TREU927/: Tb927_02_v5.1.txt  Tb927_06_v5.1.txt  Tb927_08_v5.1.txt  Tb927_09_v5.1.txt
data/MFA-Seq_TcruziCLBrenerEsmeraldo-like/: TcChr1-S.txt  TcChr10-S.txt  TcChr11-S.txt  TcChr12-S.txt  TcChr13-S.txt  TcChr14-S.txt  TcChr15-S.txt  TcChr16-S.txt  TcChr17-S.txt  TcChr18-S.txt  TcChr19-S.txt  TcChr2-S.txt  TcChr20-S.txt  TcChr21-S.txt  TcChr22-S.txt  TcChr23-S.txt  TcChr24-S.txt  TcChr25-S.txt  TcChr26-S.txt  TcChr27-S.txt  TcChr28-S.txt  TcChr29-S.txt  TcChr3-S.txt  TcChr30-S.txt  TcChr31-S.txt  TcChr32-S.txt  TcChr33-S.txt  TcChr34-S.txt  TcChr35-S.txt  TcChr36-S.txt  TcChr37-S.txt  TcChr38-S.txt  TcChr39-S.txt  TcChr4-S.txt  TcChr40-S.txt  TcChr41-S.txt  TcChr5-S.txt  TcChr6-S.txt  TcChr7-S.txt  TcChr8-S.txt  (+1 more)
data/MFA-Seq_Trypanosoma brucei brucei TREU927/: Tb927_01_v5.1.txt  Tb927_03_v5.1.txt  Tb927_04_v5.1.txt  Tb927_05_v5.1.txt  Tb927_07_v5.1.txt  Tb927_10_v5.1.txt  Tb927_11_v5.1.txt
data/MFA-Seq_dummy/: dummy_01.txt
data/test_output/simulation_0/: cell.txt
data/test_output/simulation_1/: cell.txt
include/: chromosome.hpp  configuration.hpp  cuda_s_phase.hpp  data_manager.hpp  data_provider.hpp  evolution.hpp  evolution_data_provider.hpp  fork.cuh  fork_manager.hpp  genome.hpp  genomic_location.hpp  gpu_s_phase.hpp  mem_manager.hpp  opencl.hpp  replication_fork.hpp  s_phase.hpp  util.hpp
script/: CDS_to_SQL.py  calculate-distance-origin-fork-stall.rb  cell_output_aggregator.py  collision_distance_median.py  collision_distance_median_parallel.py  ctest_no_fail.sh  run-NAR-assays.pl  run-scientific-report-assays.pl  run-series-experiments.rb  run-structured-region-assays.rb  summarize-series-experiments.rb  train-model-hyperparameters.py  visualize.py
src/: chromosome.cpp  configuration.cpp  cuda_s_phase.cu  data_manager.cpp  evolution.cpp  evolution_data_provider.cpp  fork.cu  fork.ocl  fork_manager.cpp  genome.cpp  genomic_location.cpp  gpu_s_phase.cpp  main.cpp  replication_fork.cpp  s_phase.cpp  util.cpp
test/: test_chromosome.cpp  test_configuration.cpp  test_data_manager.cpp  test_evolution.cpp  test_fork_manager.cpp  test_genome.cpp  test_genomic_location.cpp  test_replication_fork.cpp  test_s_phase.cpp  test_util.cpp
test/config/: config.yaml  config_evolution.yaml  invalid_option_config.yaml
test/expected_outputs/: dummy01_times_constitutive_with_transcription.txt  dummy01_times_constitutive_without_transcription.txt  dummy01_times_dormant_with_transcription.txt  dummy01_times_dormant_without_transcription.txt  dummy01_times_with_transcription.txt
